<?xml version="1.0"?>
<package format="3">
  <name>industrial_tcp</name>
  <version>0.1.0</version>
  <description>Industrial TCP control channel using Boost.Asio</description>

  <maintainer email="mshreyas11@gmail.com">Shreyas Manjunath</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>boost</depend>
  <!-- <depend>rclcpp</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
